updated XSLT and python transformation file, added HTML files for letters

--- a/Webseite/briefedition/public/briefe_html/brief1.html
+++ b/Webseite/briefedition/public/briefe_html/brief1.html
@@ -22,12 +22,12 @@
                 ich gehe zu kranken general – u küsse die gute Mutter<br>
                 nun in eile – Laroche<br>
                 [2]
-                xxxxxx<br>
+                <span class="recipient-note"><span class="unclear">xxxxxx</span><br>
                 <span class="entity place" data-key="ort1">offb.</span> 20ter July<br>
                 1795.<br>
                 S. v. Laroche.<br>
-                <span class="underline">E d. xl.<br>
-                b. x 22ten</span><br>
+                <span class="underline">E d. <span class="unclear">xl.</span><br>
+                b. <span class="unclear">x</span> 22ten</span><br></span>
                 <br>
                 Lieber! den augenblick – leße Ihr –<br>
                 mir durch die <span class="underline">Einzige</span> gebrachtes Billet<br>
