fixed formatting in tei and html letter files

--- a/Webseite/briefedition/public/briefe_html/brief2.html
+++ b/Webseite/briefedition/public/briefe_html/brief2.html
@@ -13,7 +13,7 @@
                 zu leße gesellschaft kam – können Sie<br>
                 sich nicht sagen – das alte tante eine sehr<br>
                 seltsame Rolle spielen würde –<br>
-                heut nachmitag komt <span class="entity person cert-low" data-keys='["person1"]'>S.</span> <div class="rs">ihren Bruder</div> u<br>
+                heut nachmitag komt <span class="entity person cert-low" data-keys='["person1"]'>S.</span> <span class="entity person cert-low" data-keys='["person68"]'>ihren Bruder</span> u<br>
                 Wagner abzuholen – will acht geben, ob<br>
                 nichts gesagt – nichts vermuthet wird –<br>
                 Geschichte von W. M. - soll garstig seyn –<br>
