--- a/Webseite/briefedition/public/briefe_html/brief24.html
+++ b/Webseite/briefedition/public/briefe_html/brief24.html
@@ -52,16 +52,11 @@
                 Schätzbarer freunde –<br>
                 <br>
                 <span class="recipient-note"><div class="lg">
-<br>
                 <div class="l">Ärmlicher Witz der nur mit Wort-</div>
-<br>
                 <div class="l">Verdrehungen frech spielt</div>
-<br>
                 <div class="l">böser Bube du bist selbst ein</div>
-<br>
                 <div class="l">verdrehter Satyr</div>
-<br>
-                </div></span><br>
+                </div></span>
                 [4]
                 <span class="recipient-note"><span class="entity place" data-key="ort1">offenbach</span> <span class="unclear">x</span><br>
                 18<sup>ten</sup> Aug. 1800.<br>
