updated manual keywords

--- a/Webseite/briefedition/public/data/briefe_html/brief7.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief7.html
@@ -29,7 +29,7 @@
                 edle Güten der Seele gebrauchen<br>
                 Gott der Sie schon viel erfahren lassen.<br>
                 <span class="underline">Stärke</span> - <span class="underline">erhalte</span> und <span class="underline">Seegne Sie</span><br>
-                ich werde Sie mmer für dieß Seegnen was<br>
+                ich werde Sie immer für dieß Seegnen was<br>
                 <span class="underline">Sie</span> Ihrer würdigen <span class="entity person" data-keys='["person8"]'>Mutter</span> waren <span class="underline">u</span> was Sie<br>
                 mir noch mittwochs sagten – der Ewige <span class="underline">erhalte<br>
                 Sie</span> theurer bester junger Mann!<br>
